// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DescribedButton /> renders 1`] = `
<DescribedComponent
  description="test description"
>
  <Button
    active={false}
    disabled={false}
    type="button"
    variant="primary"
  />
</DescribedComponent>
`;

exports[`<DescribedButton /> renders as link opening on new window 1`] = `
<DescribedComponent
  description="test description"
>
  <Button
    active={false}
    disabled={false}
    href="testValue"
    target="_blank"
    type="button"
    variant="primary"
  />
</DescribedComponent>
`;

exports[`<DescribedButton /> renders with Tooltip show from beginning 1`] = `
<DescribedComponent
  defaultShow={true}
  description="test description"
>
  <Button
    active={false}
    disabled={false}
    type="button"
    variant="primary"
  />
</DescribedComponent>
`;

exports[`<DescribedButton /> renders with custom Tooltip className 1`] = `
<DescribedComponent
  className="testValue"
  description="test description"
>
  <Button
    active={false}
    disabled={false}
    type="button"
    variant="primary"
  />
</DescribedComponent>
`;

exports[`<DescribedButton /> renders with custom Tooltip delay 1`] = `
<DescribedComponent
  delay={3000}
  description="test description"
>
  <Button
    active={false}
    disabled={false}
    type="button"
    variant="primary"
  />
</DescribedComponent>
`;

exports[`<DescribedButton /> renders with custom Tooltip placement 1`] = `
<DescribedComponent
  description="test description"
  placement="top"
>
  <Button
    active={false}
    disabled={false}
    type="button"
    variant="primary"
  />
</DescribedComponent>
`;

exports[`<DescribedButton /> renders with custom Tooltip trigger 1`] = `
<DescribedComponent
  description="test description"
  trigger="hover"
>
  <Button
    active={false}
    disabled={false}
    type="button"
    variant="primary"
  />
</DescribedComponent>
`;

exports[`<DescribedButton /> renders with custom active state 1`] = `
<DescribedComponent
  description="test description"
>
  <Button
    active={true}
    disabled={false}
    type="button"
    variant="primary"
  />
</DescribedComponent>
`;

exports[`<DescribedButton /> renders with custom block 1`] = `
<DescribedComponent
  description="test description"
>
  <Button
    active={false}
    block={true}
    disabled={false}
    type="button"
    variant="primary"
  />
</DescribedComponent>
`;

exports[`<DescribedButton /> renders with custom button id 1`] = `
<DescribedComponent
  description="test description"
>
  <Button
    active={false}
    disabled={false}
    id="testValue"
    type="button"
    variant="primary"
  />
</DescribedComponent>
`;

exports[`<DescribedButton /> renders with custom button name 1`] = `
<DescribedComponent
  description="test description"
>
  <Button
    active={false}
    disabled={false}
    name="testValue"
    type="button"
    variant="primary"
  />
</DescribedComponent>
`;

exports[`<DescribedButton /> renders with custom button type 1`] = `
<DescribedComponent
  description="test description"
>
  <Button
    active={false}
    disabled={false}
    type="submit"
    variant="primary"
  />
</DescribedComponent>
`;

exports[`<DescribedButton /> renders with custom className of an icon 1`] = `
<DescribedComponent
  description="test description"
>
  <Button
    active={false}
    disabled={false}
    type="button"
    variant="primary"
  >
    <Glyphicon
      className="testValue"
      icon="testIcon"
    />
  </Button>
</DescribedComponent>
`;

exports[`<DescribedButton /> renders with custom className of button 1`] = `
<DescribedComponent
  description="test description"
>
  <Button
    active={false}
    className="testValue"
    disabled={false}
    type="button"
    variant="primary"
  />
</DescribedComponent>
`;

exports[`<DescribedButton /> renders with custom disabled state 1`] = `
<DescribedComponent
  description="test description"
>
  <Button
    active={false}
    disabled={true}
    type="button"
    variant="primary"
  />
</DescribedComponent>
`;

exports[`<DescribedButton /> renders with custom icon 1`] = `
<DescribedComponent
  description="test description"
>
  <Button
    active={false}
    disabled={false}
    type="button"
    variant="primary"
  >
    <Glyphicon
      icon="testValue"
    />
  </Button>
</DescribedComponent>
`;

exports[`<DescribedButton /> renders with custom icon and text 1`] = `
<DescribedComponent
  description="test description"
>
  <Button
    active={false}
    disabled={false}
    type="button"
    variant="primary"
  >
    <Glyphicon
      icon="testIcon"
    />
    testText
  </Button>
</DescribedComponent>
`;

exports[`<DescribedButton /> renders with custom onClick action with given argument 1`] = `
<DescribedComponent
  description="test description"
>
  <Button
    active={false}
    disabled={false}
    onClick={[Function]}
    type="button"
    variant="primary"
  />
</DescribedComponent>
`;

exports[`<DescribedButton /> renders with custom size 1`] = `
<DescribedComponent
  description="test description"
>
  <Button
    active={false}
    disabled={false}
    size="sm"
    type="button"
    variant="primary"
  />
</DescribedComponent>
`;

exports[`<DescribedButton /> renders with custom text 1`] = `
<DescribedComponent
  description="test description"
>
  <Button
    active={false}
    disabled={false}
    type="button"
    variant="primary"
  >
    testValue
  </Button>
</DescribedComponent>
`;

exports[`<DescribedButton /> renders with custom variant 1`] = `
<DescribedComponent
  description="test description"
>
  <Button
    active={false}
    disabled={false}
    type="button"
    variant="secondary"
  />
</DescribedComponent>
`;

exports[`<DescribedButton /> renders with no description 1`] = `
<Button
  active={false}
  disabled={false}
  type="button"
  variant="primary"
/>
`;
